--- a/restate/templates/info.html
+++ b/restate/templates/info.html
@@ -171,7 +171,7 @@
   </div>
 
 
-  <footer class="bgred " style="font-size: 24px;color:#fff">
+  <footer class="bgred " style="margin-top:50px;position:fixed; bottom:0 ;font-size: 24px; color: #fff;width:100%">
     <center> Contact Us For Help!!!</center>
   </footer>
 
