--- a/restate/templates/realtor.html
+++ b/restate/templates/realtor.html
@@ -6,30 +6,36 @@
 
 
 <div class="container">
-<div class="row">
+  <div class="row">
 
 
- <section id="listing" class="py-4">
-    <div class="container">
-      
-      <div class="row">
-        <div class="col-md-9">
-          
-          <img src="{{r.photo.url}}" alt="" class="img-main img-fluid mb-3"style="width:100% ;">
+    <section id="listing" class="py-4">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-md-9">
+
+            <img src="{{r.photo.url}}" alt="" class="img-main img-fluid mb-3" style="width:100% ;">
 
 
 
 
 
-  </div></div> Name :<h2>{{r.name}}</h2>
+          </div>
+        </div> Name :<h2>{{r.name}}</h2>
 
-  Contact:{{r.contact}}
-<br>
-  Email:{{r.email}}
-<br>
-  Description:<br><p>{{r.description}}</p>
-</div></div></div>
-    <footer class="bgred " style="font-size: 24px;color:#fff">
-                   <center>  Contact Us For Help!!!</center>
-               </footer>
+        Contact:{{r.contact}}
+        <br>
+        Email:{{r.email}}
+        <br>
+        Description:<br>
+        <p>{{r.description}}</p>
+      </div>
+  </div>
+</div>
+<div style="margin-top: 100px;">
+  <footer class="  bgred " style="margin-top:100px; position:fixed; bottom:0 ;font-size: 24px; color: #fff;width:100%">
+    <center>Contact Us For Help!!!</center>
+  </footer>
+</div>
 {% endblock %}
