--- a/restate/templates/browse.html
+++ b/restate/templates/browse.html
@@ -165,8 +165,10 @@
 </div>
 </div>
 
-<footer class="bgred " style="font-size: 24px;color:#fff">
-  <center> Contact Us For Help!!!</center>
-</footer>
-
+<div style="margin-top: 50px;">
+  <footer class="  bgred "
+    style="z-index:3; margin-top:100px; position:fixed; bottom:0 ;font-size: 24px; color: #fff;width:100%">
+    <center>Contact Us For Help!!!</center>
+  </footer>
+</div>
 {% endblock %}
