--- a/restate/templates/index.html
+++ b/restate/templates/index.html
@@ -86,9 +86,9 @@
   </div>
 </div>
 </div>
-
-<footer class=" bgred" style="font-size: 24px; color: #fff;">
-  <center>Contact Us For Help!!!</center>
-</footer>
-
+<div style="margin-top: 100px;">
+  <footer class="  bgred " style="margin-top:100px; position:fixed; bottom:0 ;font-size: 24px; color: #fff;width:100%">
+    <center>Contact Us For Help!!!</center>
+  </footer>
+</div>
 {% endblock %}
